    mechanism to set attributes (properties) as spring bean properties on legacy convertors.
    Currently this includes ( XMLFormatter,GenericXMLWriter, GenericXMLReader)
    Added some extra legacy conversion examples also.
    Modified DataObjectToDOXmlConvertor to issue uniqueId by default (this mirrors default
    legacy adaptors behaviour)

Bug Fixes
=========

SC28: JDBC PreparedStatement writers should not use setObject(null), but setNull().

SC29: DB Event Mechanism error message for invalid SPROC is unclear
    
SC30: Remove need for constructor-arg on MBeanServer

SC31: DateHolder types should become java Dates when converting legacy DataObjects
      Added property to allow conversion of proprietary DataObject DateHolder types
      into java.util.Dates.
      The default value for this property is 'true' which means default behaviour will 
      differ from 3.3  
      
SC32: The pipeline DOXmlToDataObject -> DataObjectToOrderedMap will fail if the incoming
      DOXML contains more than one top-level data object. 
      Note that as a side-efffect, the default value for 'box returned arrays' in the
      AbstractConvertor class has changed from 3.3 (true) to 'false'.

SC33: JMSConnection cannot work without a valid JNDIConnection. This is because the
      connectors need to always lookup the JMS Destination. The Connectors have now
      changed to allow their destinations to be set directly if this is required.

SC34: (Bug (and patch for it) in OrderedMapToXMLConverter that does not allow to set a 
      slash substitution value)
      
SC35: OrderedMapToXmlConvertor should, but does not map slashes in the root tag 

SC36: MapCallableStatementWriter misses first argument for Oracle databases
    
=================================================
openadaptor3 production 3.3 Release Notes

See licences/licence.txt for Licence information.
=================================================

Date: 5th October 2007
Author: openadaptor Core Team
